# horadric-lib

./: pyproject.toml
src/horadric_lib/: __init__.py  config.py  state.py
src/horadric_lib/datasets/: manager.py  registry.py
src/horadric_lib/logging/: __init__.py  config.py
