[project]
name = "horadric-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = 'Mehtab "Shahan" Iqbal', email = "mehtabi@clemson.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "binpickle>=0.3.4",
    "datasets>=4.8.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "structlog>=25.5.0",
]

[project.scripts]
horadric-data = "horadric_lib.datasets.manager:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"


[tool.ruff]
line-length = 120
target-version = "py311"
fix = true

[tool.ruff.lint]
ignore = [
	"W191",  # indentation contains tabs
	"B008", # function call in default argument
    "D1",
]
select = [
	"E",  # Pyflakes errors
	"W",  # Pyflakes warnings
	"F",  # Pyflakes errors
	"I",  # isort
	"C",  # flake8-comprehensions
	"B",  # flake8-bugbear
	"UP", # pyupgrade,
	"D",  # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
